# seeddb

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  seeddb.conf
cmake/: Catch2.cmake
docs/: BENCHMARK.md  CODING_STANDARDS.md
docs/superpowers/: progress.md
docs/superpowers/plans/: 2026-03-16-sql-parser-design.md  2026-03-22-builtin-functions.md  2026-03-23-join-support-implementation.md  2026-03-30-index-directory.md
docs/superpowers/specs/: 2026-03-11-seeddb-design.md  2026-03-12-lexer-design.md  2026-03-13-sql-parser-design.md  2026-03-22-builtin-functions-design.md  2026-03-23-join-support-design.md  2026-03-24-buffer-pool-design.md  2026-03-30-disk-based-execution-design.md  2026-03-30-index-directory-design.md
openspec/changes/cli-repl-tool/: design.md  proposal.md  tasks.md
openspec/changes/cli-repl-tool/specs/cli-repl/: spec.md
openspec/changes/expression-enhancement/: design.md  proposal.md  tasks.md
openspec/changes/result-set-operations/: design.md  proposal.md  tasks.md
openspec/changes/result-set-operations/specs/column-alias/: spec.md
openspec/changes/result-set-operations/specs/limit-offset/: spec.md
openspec/changes/result-set-operations/specs/order-by/: spec.md
openspec/changes/result-set-operations/specs/select-distinct/: spec.md
openspec/changes/result-set-operations/specs/table-alias/: spec.md
src/: CMakeLists.txt  pch.h
src/cli/: CMakeLists.txt  formatter.cpp  formatter.h  main.cpp  repl.cpp  repl.h
src/common/: CMakeLists.txt  config.cpp  config.h  error.cpp  error.h  logger.cpp  logger.h  logical_type.h  placeholder.cpp  string_utils.h  types.h  value.h
src/executor/: CMakeLists.txt  aggregate.h  executor.cpp  executor.h  function.cpp  function.h
src/parser/: CMakeLists.txt  ast.cpp  ast.h  keywords.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
src/storage/: CMakeLists.txt  catalog.h  disk_manager.cpp  disk_manager.h  page.h  page_header.h  page_id.h  page_manager.cpp  page_manager.h  row.h  row_serializer.h  schema.h  storage_manager.cpp  storage_manager.h  table.h  table_iterator.cpp  table_iterator.h  tid.h
src/storage/buffer/: CMakeLists.txt  buffer_pool.cpp  buffer_pool.h  frame.h  lru_replacer.cpp  lru_replacer.h
tests/: CMakeLists.txt
tests/bench/: bench_perf.cpp
tests/unit/cli/: test_formatter.cpp
tests/unit/common/: test_config.cpp  test_error.cpp  test_logger.cpp  test_logical_type.cpp  test_placeholder.cpp  test_types.cpp  test_value.cpp
tests/unit/executor/: test_disk_stress.cpp  test_executor.cpp  test_executor_disk.cpp
tests/unit/parser/: test_ast.cpp  test_lexer.cpp  test_parser.cpp
tests/unit/storage/: test_buffer_pool.cpp  test_disk_manager.cpp  test_page.cpp  test_page_header.cpp  test_page_id.cpp  test_page_manager.cpp  test_storage.cpp  test_storage_manager.cpp  test_table_iterator.cpp
